update processing library